fixed photos in talks section (was broken in mobile)

--- a/app/frontend/styles/main.less
+++ b/app/frontend/styles/main.less
@@ -325,6 +325,9 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     align-items: flex-start;
     margin: 1rem 0;
+    img {
+      width: 14rem;
+    }
   }
   .talk-content-fixed {
     height: 16rem;
@@ -665,7 +668,7 @@ only screen and (min-device-width : 1024px) and (max-device-width : 1366px) and 
       margin: 0;
       img {
         display: flex;
-       // width: 10.938rem;
+        width: auto;
         height: 10.938rem;
       }
     }
